Corrections contrasts 3

--- a/style.css
+++ b/style.css
@@ -6,11 +6,16 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+a
+{
+	text-decoration:none;
+	color:black;
+}
 
 a,
 button {
     transition: all .3s ease-in-out;
-    outline: none!important;
+    outline: none ;
 }
 
 a:hover {
@@ -67,10 +72,10 @@ a:hover {
 .bg-tr-edge,
 .bg-br-edge,
 .bg-repeat {
-    -webkit-background-size: auto!important;
-    -moz-background-size: auto!important;
-    -o-background-size: auto!important;
-    background-size: auto!important;
+    -webkit-background-size: auto ;
+    -moz-background-size: auto ;
+    -o-background-size: auto ;
+    background-size: auto ;
 }
 
 .bg-repeat {
@@ -101,7 +106,7 @@ a:hover {
 }
 
 .d-bloc {
-    color: rgba(255, 255, 255, .7);
+    color: rgba(0, 0, 0, .7);
 }
 
 .d-bloc button:hover {
@@ -134,7 +139,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: rgba(0,0,0, .6);
 }
 
 .d-bloc .a-btn:hover,
@@ -155,12 +160,12 @@ a:hover {
 }
 
 .d-bloc .navbar-toggle .icon-bar {
-    background: rgba(255, 255, 255, 1);
+    background: rgba(0, 0, 0, 1);
 }
 
 .d-bloc .btn-wire,
 .d-bloc .btn-wire:hover {
-    color: rgba(255, 255, 255, 1);
+    color: rgba(0, 0, 0, 1);
     border-color: rgba(255, 255, 255, 1);
 }
 
@@ -344,7 +349,7 @@ a:hover {
 }
 
 .navbar-toggle:hover {
-    background: transparent!important;
+    background: transparent ;
 }
 
 .navbar-toggle .icon-bar {
@@ -405,7 +410,7 @@ a:hover {
 }
 
 .nav > li > .dropdown a {
-    background: none!important;
+    background: none ;
     display: block;
     padding: 14px 15px;
 }
@@ -432,7 +437,7 @@ nav .caret {
     border-top-color: transparent;
     border-right-color: transparent;
     border-bottom-color: transparent;
-    margin: 6px -5px 0 0!important;
+    margin: 6px -5px 0 0 ;
     float: right;
 }
 
@@ -463,7 +468,7 @@ nav .caret {
 }
 
 button {
-    outline: none!important;
+    outline: none ;
 }
 
 .btn-rd {
@@ -478,11 +483,11 @@ button {
 }
 
 .icon-md {
-    font-size: 30px!important;
+    font-size: 30px ;
 }
 
 .icon-lg {
-    font-size: 60px!important;
+    font-size: 60px ;
 }
 
 .sm-shadow {
@@ -547,7 +552,7 @@ a[data-lightbox]:hover::before {
     margin-left: -25px;
     border-radius: 50%;
     background: rgba(0, 0, 0, .6);
-    color: #FFF;
+    color: #000;
     font-weight: 100;
     z-index: 1;
     position: absolute;
@@ -580,7 +585,7 @@ a[data-lightbox]:hover img {
 
 .lightbox-caption {
     padding: 20px;
-    color: #FFF;
+    color: #000;
     background: rgba(0, 0, 0, .5);
     position: absolute;
     left: 15px;
@@ -589,7 +594,7 @@ a[data-lightbox]:hover img {
 }
 
 .close-lightbox {
-    color: #FFF;
+    color: #000;
     font-size: 30px;
     position: absolute;
     top: 20px;
@@ -653,7 +658,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #575757 ;
 }
 
 .container {
@@ -718,7 +723,7 @@ h3 {
     font-size: 15px;
     text-transform: uppercase;
     font-weight: 700;
-    color: #333333!important;
+    color: #333333 ;
 }
 
 .med-width-whitespace {
@@ -728,11 +733,11 @@ h3 {
 }
 
 h1 {
-    color: #333333!important;
+    color: #333333 ;
 }
 
 h4 {
-    color: #333333!important;
+    color: #333333 ;
 }
 
 .icons {
@@ -741,7 +746,7 @@ h4 {
 }
 
 .white {
-    color: #000!important;
+    color: #000 ;
 }
 
 .portfolio-thumb {
@@ -764,7 +769,7 @@ h4 {
 
 .bold-link {
     font-weight: 900;
-    text-decoration: underline!important;
+    text-decoration: underline ;
 }
 
 .bgc-white {
@@ -780,42 +785,42 @@ h4 {
 }
 h2, .tc-white{
     font-weight:bold;
-    color: #ffb28f!important;
+    color: #ffb28f ;
     background-color:rgba(243, 151, 108, 0.3);
 }
 .tc-white {
-    color: #F3976C!important;
+    color: #F3976C ;
 }
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #000!important;
+    color: #000 ;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
-    color: #000!important;
+    background: #c27956 ;
+    color: #000 ;
 }
 
 .ltc-white {
-    color: #000!important;
+    color: #000 ;
 }
 
 .ltc-white:hover {
-    color: #cccccc!important;
+    color: #cccccc ;
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: #F3976C ;
 }
 
 .ltc-atomic-tangerine:hover {
-    color: #c27956!important;
+    color: #c27956 ;
 }
 
 .icon-dark-slate-blue {
-    color: #364577!important;
-    border-color: #364577!important;
+    color: #364577 ;
+    border-color: #364577 ;
 }
 
 .bg-dots-bg {
@@ -832,6 +837,10 @@ h2, .tc-white{
 
 .bg-presentation {
     background-image: url("img/image-de-presentation.bmp");
+}
+
+.col-sm-4,ul,li,a{
+    color:#000;
 }
 
 @media (max-width: 1024px) {
@@ -911,8 +920,8 @@ h2, .tc-white{
     h6,
     p,
     #disqus_thread {
-        padding-left: 10px!important;
-        padding-right: 10px!important;
+        padding-left: 10px ;
+        padding-right: 10px ;
     }
     .b-parallax {
         background-attachment: scroll;
@@ -920,7 +929,7 @@ h2, .tc-white{
     .navbar .nav {
         padding-top: 0;
         border-top: 1px solid rgba(0, 0, 0, .2);
-        float: none!important;
+        float: none ;
     }
     .navbar.row {
         margin-left: 0;
@@ -945,7 +954,7 @@ h2, .tc-white{
     }
     .dropdown .dropdown a .caret {
         float: none;
-        margin: 5px 0 0 10px!important;
+        margin: 5px 0 0 10px ;
         border: 4px solid black;
         border-bottom-color: transparent;
         border-right-color: transparent;
@@ -955,7 +964,7 @@ h2, .tc-white{
         background: rgba(0, 0, 0, .8);
     }
     #hero-bloc .navbar .nav a {
-        color: rgba(255, 255, 255, .6);
+        color: rgba(0, 0, 0, .6);
     }
     .hero {
         padding: 50px 0;
